# msat

./: .gitignore  LICENSE  LICENSE.promo.md  README.md  build.sh  debug.sh  index.html  setup.md
admin_dashboard/: Cargo.toml
admin_dashboard/src/: main.rs
app_server/: Cargo.toml
app_server/src/: cli.rs  config.rs  database.rs  main.rs  types.rs
ci/: build.py  build.sh  global-build.sh  local-build.sh  msat-build.sh
ci/sample_data/: config.toml
docs/: README.md  setup-en.md  setup-pl.md
docs/bundle/: setup-en.md  setup-pl.md
docs/web/: main.css  main.js
http_server/: Cargo.toml
http_server/data/: database.db
http_server/src/: lib.rs
http_server/web/: index.html  main.css  main.js
msat/: Cargo.toml
msat/admin_dashboard/: Cargo.toml
msat/admin_dashboard/data/: database.db
msat/admin_dashboard/src/: main.rs  web.rs
msat/admin_dashboard/web/: index.html  main.css  main.js
msat/app_server/: Cargo.toml  invite.code
msat/app_server/data/: database.db  database.db-shm  database.db-wal
msat/app_server/src/: main.rs
msat/shared_components/: Cargo.toml
msat/shared_components/src/: backend.rs  cli.rs  config.rs  consts.rs  database.rs  lib.rs  password.rs  static_data.rs  types.rs  utils.rs  visual.rs
msat/tc/: Cargo.toml
msat/tc/src/: main.rs
msat/testing_client/: Cargo.toml
msat/testing_client/src/: main.rs
promo/: logo-project.free
server/: Cargo.toml
server/data/: config.toml
server/src/: config.rs  database.rs  init.sql  main.rs
tc/src/: main.rs
website/: main.css
