[package]
name = "mhs"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = {version = "0.32.1", features=["bundled"]}
serde = {version= "1.0.217", features=["derive"]}
tokio = {version = "1.42.0", features = ["full"]}
toml = "0.8.19"

[lib]
name = "http_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name="mhs-bin"
version="0.1.0"
edition="2021"
path="src/lib.rs"
