[workspace]
members = [
	"app_server",
	"admin_dashboard",
	"shared_components",
	"testing_client"
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false

[workspace.dependencies]
rusqlite = {version = "0.32.1", features=["bundled"]}
serde = {version="1.0.216",features=["derive"]}
tokio = {version="1.42.0",features=["full"]}
colored = "2.2.0"
toml = "0.8.19"
