[workspace]
members = [
	"app_server",
	"admin_dashboard",
	"shared_components",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false

[workspace.dependencies]
rusqlite = { version = "0.33.0" , features=["bundled"] }
serde    = { version = "1.0.217", features=["derive"]  }
tokio    = { version = "1.43.0" , features=["full"]    }
colored  = "3.0.0"
toml     = "0.8.19"
